@@ -7,6 +7,7 @@ CHANGELOG Roundcube Webmail
 - Enable use of TLSv1.1 and TLSv1.2 for IMAP (#1490640)
 - Fix XSS issue in SVG images handling (#1490625)
 - Fix (again) security issue in DBMail driver of password plugin [CVE-2015-2181] (#1490643)
+- Fix bug where Archive/Junk buttons were not active after page jump with select=all mode (#1490647)
 
 RELEASE 1.1.4
 -------------
